TestCases/Errors/Haversine/observations/sst/aut_06_obs.spm
obs r15-c5 5.52740991043615e-05
obs r16-c5 0.000169344817588364
obs r17-c5 0.000116331751812703
obs r15-c6 9.12627379235014e-05
obs r16-c6 9.64525877705626e-05
obs r17-c6 5.04711681987118e-05
obs r18-c6 6.17691568139412e-05
obs r19-c6 7.33647926196128e-05
obs r13-c11 1e-08
obs r12-c12 1e-08
obs r13-c12 1e-08
obs r11-c18 0.0572727272727273
obs r12-c18 0.0323049863790828
obs r10-c19 0.0166293682795699
obs r11-c19 0.0292340067340067
obs r12-c19 0.0447402757884686
obs r10-c20 0.0153125
obs r11-c20 0.018125
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r17-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r19-c6 0.2
error_value r13-c11 0.2
error_value r12-c12 0.2
error_value r13-c12 0.2
error_value r11-c18 0.2
error_value r12-c18 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
